--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "standard": "^17.1.2",
-    "vite": "^6.0.1"
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.0.7"
   },
   "eslintConfig": {
     "extends": [
